# kfft

./: .clang-format  .gitignore  COPYRIGHT  Makefile  README  README.md  _bf.h  _kfft_bf.h  _kfft_gen.h  _kfft_guts.h  _kfft_rader.h  _kiss_fft_guts.h  app  config.h.in  kfft.c  kfft.h  kfft_alloc.c  kfft_alloc.h  kfft_bfly.c  kfft_conv.c  kfft_core.c  kfft_core.h  kfft_cpx.c  kfft_cpx.h  kfft_ext.c  kfft_generic.c  kfft_guts.h  kfft_math.c  kfft_math.h  kfft_pool.c  kfft_rader.c  kfft_rader.h  kfft_real.c  kfft_real.h  kfft_scalar.c  kfft_shift.c  kfft_simd.c  kfft_simd_compat.h  kfft_tiny.h  kfft_trace.h  (+11 more)
2d/: kfft_cpx2.c  kfft_cpx2.h  kfft_scalar2.c  kfft_scalar2.h  meson.build
app/: cmd.c  cmdline.c  const.h  cwork.c  fft_app.c  info.c  meson.build  swork.c
demo/: cmd.c  const.h  cwork.c  fft_app.c  meson.build  swork.c
docs/: Doxyfile  meson.build
docs/example/: example_tiny.c
ext/: meson.build
ext/2d/: kfft_cpx2.c  kfft_cpx2.h  kfft_scalar2.c  kfft_scalar2.h  meson.build
ext/conv/: kfft_cpx_conv.c  kfft_cpx_conv.h  kfft_scalar_conv.c  kfft_scalar_conv.h  meson.build
ext/conv2d/: kfft_cpx_conv.c  kfft_cpx_conv.h  kfft_scalar_conv.c  kfft_scalar_conv.h  meson.build
ext/sparse/: kfft_cpx_sparse.c  kfft_cpx_sparse.h  kfft_scalar_sparse.c  kfft_scalar_sparse.h  meson.build
incs/: kfft_algo.h  kfft_alloc.h  kfft_conv.h  kfft_cpx.h  kfft_ext.h  kfft_guts.h  kfft_macro.h  kfft_math.h  kfft_pool.h  kfft_rader.h  kfft_real.h  kfft_scalar.h  kfft_shift.h  kfft_simd.h  kfft_system.h  kfft_trace.h  kfft_types.h
math/: kfft_custom_math.h  kfft_scd.c  kfft_scd.h  kfft_scf.c  kfft_scf.h  meson.build
new_app/: cmdline.c  complex.c  const.h  info.c  kfa_defs.h  kfft_main.c  loader.c  meson.build  scalar.c
simd/: .meson.build.swo  kfft_headers.h  kfft_simd.c  kfft_simd.h  kfft_simd_check.c  kfft_simd_check.h  meson.build
simd/avx/: kfft_bfly.c  kfft_bfly.h  kfft_generic.c  kfft_generic.h  kfft_math.c  kfft_math_avx.h  kfft_math_intern.h  meson.build
simd/avx2/: meson.build
simd/sse/: kfft_bfly.c  kfft_bfly.h  kfft_generic.c  kfft_generic.h  kfft_math.c  kfft_math.h  kfft_math_intern.h  kfft_math_sse.h  kfft_sse.c  kfft_sse.h  kfft_sse_defs.h  meson.build
simd/sse/half/: kfft_bfly.c  kfft_bfly.h  kfft_generic.c  kfft_generic.h  kfft_math.c  kfft_math_intern.h  kfft_math_sse.h  meson.build
simd/sse/norm/: kfft_bfly.c  kfft_bfly.h  kfft_generic.c  kfft_math.c  meson.build
test/: app.c  demo.c  demo_cpx.c  demo_real.c  meson.build  test.c  testapp.c
test/bench/: app.c  meson.build  tb_cpx_fftw.c  tb_cpx_kfft.c  time_bench.py
test/bench/speed/: meson.build  speed_bench.py  speed_kfft_bench.py  tb_cpx_fftw.c  tb_cpx_kfft.c  tb_cpx_kiss.c  tb_scr_fftw.c  tb_scr_kfft.c  tb_scr_kiss.c  time_bench.py
test/bench/speed/kiss_fft/: _kiss_fft_guts.h  kiss_fft.c  kiss_fft.h  kiss_fftr.c  kiss_fftr.h  meson.build
test/bench/valid/: kfft_fftw_cpx.c  kfft_fftw_scr.c  meson.build  valid_kfft_bench.py  valid_kfft_bench2.py
test/unit/: meson.build  run.c  util.c  util.h
test/unit/suites/: DEMO_SUITE  api_cpx1.c  api_cpx2.c  api_sclr2.c  defs_cpx1.h  defs_cpx2.h  math_sincos.c  math_sqrt.c  meson.build  sys_pool.c
