option ('build_with_lto', type: 'boolean', value: 'true',
        description: 'build with link time optimization')
option ('build_with_pgo', type: 'boolean', value: 'true',
        description: 'build with profile optimization')
option ('build_with_native', type: 'boolean', value: 'true',
        description: 'build with native CPU instructions')

option ('enable_tests', type: 'boolean', value: 'true',
        description: 'build with tests applications')
option ('enable_traces', type: 'boolean', value: 'true',
        description: 'use stdio messages in kfft lib')
option ('enable_simd', type: 'boolean', value: 'false',
        description: 'use SIMD optimized code')
option ('enable_alloca', type: 'boolean', value: 'true',
        description: 'use alloca for temporary buffers (dangerouse)')
option ('enable_sysmath', type: 'boolean', value: 'true',
        description: 'use system (or custom) defines and math functions')
option ('enable_fastmath', type: 'boolean', value: 'true',
        description: 'use -ffast-math optimization (maybe dangerouse)')
option ('enable_extended', type: 'boolean', value: 'true',
        description: 'enable extended algoritms')
option ('enable_memless', type: 'boolean', value: 'false',
        description: 'use memory less mode (very slow)')

option ('build_library_api', type : 'combo', choices: ['export', 'import', 'none'], value: 'export',
        description: 'library API type')
